[metadata]
name = device-health-app-python
version = 0.1.0
description = An emulation of the Duo Device Health App written in Python
url = https://github.com/csanders-git/device-health-app-python
maintainer = csanders-git
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
# Packages in here should rarely be pinned. This is because these
# packages (at the specified version) are required for project
# consuming this library. By pinning to a specific version you are
# reducing the number of projects that can consume this or forcing them
# to upgrade/downgrade any dependencies pinned here in their project.
install_requires =
python_requires = >=3.9

[options.packages.find]
exclude = tests*

[flake8]
format = pylint
exclude = .svc,CVS,.bzr,.hg,.git,__pycache__,venv
max-line-length = 120

# flake8-tidy-imports rules
banned-modules =
  dateutil.parser = Use `ciso8601` instead
  flask.ext.restful = Use `flask_restful`
  flask.ext.script = Use `flask_script`
  flask_restful.reqparse = Use `marshmallow` for request/response validation
  haversine = Use `from fast_distance import haversine`
  py.test = Use `pytest`
  python-s3file = Use `boto`

[pycodestyle]
max-line-length = 120

[coverage:report]
fail_under = 90

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_calls = false
disallow_untyped_defs = true
no_implicit_optional = true
disallow_any_explicit = false
disallow_any_expr = false
ignore_missing_imports = true

[mypy-tests.*]
disallow_untyped_defs = false
disallow_untyped_calls = false
